@@ -5,6 +5,8 @@
 	  try/catch block so we catch any exceptions generated by Rcpp::as
 	  or other functions and forward it along to an R-language stop()
 	  error instead of terminating our R instance.
+	* inst/unitTests/runit.messages.R (test.message): Add unit tests
+	  for our handling of setting repeated message fields.
 
 2013-12-26  Murray Stokely  <mstokely@google.com>
 
